<resources>
    <string name="app_name">GoalSetter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GoalSetter</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="other">Sonstiges</string>
    <string name="mood_manager">Mood Manager</string>
    <string name="goals_manager">Goals Manager</string>
    <string name="info">Infos</string>
    <string name="add_goals">Add Goals</string>
    <string name="edit_goal">Edit Goal</string>
    <string name="current_mood">Aktueller Punktestand:</string>
    <string name="current_status">Dein Status:</string>
    <string name="short_goals">Kurzfristige Ziele</string>
    <string name="medium_goals">Mittelfristige Ziele</string>
    <string name="long_goals">Langfristige Ziele</string>
    <string name="add_new_goal">Neues Ziel</string>
    <string name="name">Name</string>
    <string name="count">Anzahl</string>
    <string name="valid_until">Gültig bis</string>
    <string name="fixed">Fixiert</string>
    <string name="goal_name">Zielbezeichnung</string>
    <string name="goal_count">Zielanzahl</string>
    <string name="goal_type">Ziellänge</string>
    <string name="goal_class">Zielart</string>
    <string name="save_goal">Ziel speichern</string>
    <string name="too_many_goals">Zu viele Ziele gespeichert. Lösche eines!</string>
    <string name="delete_message">Das folgende Ziel wird gelöscht:</string>
    <string name="confirm_message">Das folgende Ziel wird bestätigt:</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="confirm">Ziel bestätigen</string>
    <string name="delete">Ziel löschen</string>
    <string name="edit">Ziel bearbeiten</string>
    <string name="nextGoal">Nächstes Ziel</string>
    <string name="actualMood">Laune</string>
    <string name="general">Allgemeines</string>
    <string name="solvedGoals">Gelöste Aufgaben</string>
    <string name="AppNameDesc">Applikationsname:</string>
    <string name="Version">Version:</string>
    <string name="DaysSinceStart">Datum Start:</string>
    <string name="LastUpdate">Letztes Update:</string>
    <string name="solvedShorts">Kurzfristige Aufgaben:</string>
    <string name="solvedMediums">Mittelfristige Aufgaben:</string>
    <string name="solvedLong">Langfristige Aufgaben:</string>
    <string name="solvedFortune">Vermögen:</string>
    <string name="solvedKnowledge">Wissen:</string>
    <string name="solvedReputation">Soziales:</string>
    <string name="solvedRomance">Romantisch:</string>
    <string name="solvedFamily">Familie:</string>
    <string name="solvedTotal">Total:</string>

    <string-array name="goalsType_array">
        <item>Kurz</item>
        <item>Mittel</item>
        <item>Lang</item>
    </string-array>
    <string-array name="goalsClass_array">
        <item>Vermögen</item>
        <item>Wissen</item>
        <item>Soziales</item>
        <item>Romantisch</item>
        <item>Familie</item>
    </string-array>
    <string-array name="mood_array">
        <item>Undefiniert</item>
        <item>Loser</item>
        <item>Niedergeschlagen</item>
        <item>Mittelmäßig</item>
        <item>Gut</item>
        <item>Wunderbar</item>
    </string-array>
</resources>
