<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mood"
            android:icon="@drawable/ic_mood"
            android:title="@string/mood_manager" />
        <item
            android:id="@+id/nav_manage_goals"
            android:icon="@drawable/ic_alarm_on"
            android:title="@string/goals_manager" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_build"
                android:title="Einstellungen" />
            <item
                android:id="@+id/nav_infos"
                android:icon="@drawable/ic_copyright"
                android:title="Infos" />
        </menu>
    </item>
</menu>
