<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/frg_edit_goal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:id="@+id/add_goal_ll">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/goalName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/goal_name"
                android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/InputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:text="@string/goal_class" />
        <Spinner
            android:id="@+id/spin_goalClass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/goalCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/goal_count"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:text="1" />
        </android.support.design.widget.TextInputLayout>

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_editGoal"
            android:layout_gravity="center_vertical"
            android:text="@string/save_goal"
            android:tag="edit_button"/>

    </LinearLayout>
</ScrollView>