<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/goalDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/small_border"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/goalImage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_not_interested" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
        <TextView
            android:id="@+id/goalName"
            style="@style/InputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/name" />

        <TextView
            android:id="@+id/goalCount"
            style="@style/InputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/count" />

        <TextView
            android:id="@+id/goalValid"
            style="@style/InputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/valid_until" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>